# users-management-service

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: config.py
src/api/: main.py
src/api/endpoints/: router.py
src/api/endpoints/v1/: users.py
src/api/models/: user.py  users.py
src/api/repository/: users.py
src/api/schemas/: user.py  users.py
src/database/: database.py
